kubernetes/base/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mandelbrot-bardin-haus-app
  labels:
  annotations:
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    name: mandelbrot
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mandelbrot-bardin-haus-vhost
  labels:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: "idle_timeout.timeout_seconds=121"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "120"
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "300"
spec:
  rules:
  - host: $(ROUTE_HOST) 
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: mandelbrot-bardin-haus-app
            port:
              number: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mandelbrot
  labels:
spec:
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  replicas: 1
  selector:
    matchLabels:
      name: mandelbrot
  template:
    metadata:
      labels:
        name: mandelbrot
    spec:
      volumes:
      - name: run
        emptyDir: {}
      - name: mandelbrot-config
        configMap:
          name: mandelbrot-config
      - name: cache-volume
        emptyDir: {}
        #hostPath:
        #  path: /var/tmp/mandelbrot
        #  type: DirectoryOrCreate
      securityContext:
        fsGroup: 33
      containers:
      - name: mandelbrot-bardin-haus-app
        #image: mandelbrot:latest
        image: 805165820212.dkr.ecr.us-west-2.amazonaws.com/mavencraft:mandelbrot-008
        imagePullPolicy: IfNotPresent
        volumeMounts: 
        - mountPath: /var/run/apache2
          name: run
        - name: "mandelbrot-config"
          mountPath: "/etc/apache2/sites-available/mandelbrot.conf"
          subPath: mandelbrot.conf
        - mountPath: /var/tmp/mandelbrot
          name: cache-volume
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 100Mi
            cpu: 1000m
          limits:
            memory: 200Mi
            cpu: 1000m
        command:
        - "apache2"
        - "-D"
        - "FOREGROUND"
        env: &1
        - name: APP_ENV
          value: production
