kubernetes/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-api
  labels:
  annotations:
    #kubernetes.io/ingress.class: alb
    #alb.ingress.kubernetes.io/scheme: internet-facing
    #alb.ingress.kubernetes.io/target-type: ip
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    #alb.ingress.kubernetes.io/load-balancer-attributes: "idle_timeout.timeout_seconds=121"
    #alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "120"
    #alb.ingress.kubernetes.io/healthcheck-interval-seconds: "300"
spec:
  rules:
  - host: $(SERVER_NAME) 
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: http-api
            port:
              number: 8080
